# add-nanobot-customer-service

add-nanobot-customer-service/: SKILL.md
add-nanobot-customer-service/chat_backend/: config.py  mcp.json  mcp_server.py  pyproject.toml  rag_tool.py  schemas.py
chat_backend/: README.md  app.py  main.py  mcp_server.py  rag_tool.py
chat_backend/logging_config/: logger.py
