[project]
name = "chat-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.1",
    "langchain>=1.3.9",
    "langchain-classic>=1.0.8",
    "langchain-openai>=1.3.2",
    "mcp>=1.28.1",
    "fastmcp>=0.1.0",
    "pydantic-settings>=2.14.1",
    "structlog>=26.1.0",
    "uvicorn>=0.49.0",
]
